undo math clamp